--- a/MT3_02_01.vcxproj.filters
+++ b/MT3_02_01.vcxproj.filters
@@ -56,6 +56,12 @@
     <ClCompile Include="Sphere.cpp">
       <Filter>KamataEngine</Filter>
     </ClCompile>
+    <ClCompile Include="Collision.cpp">
+      <Filter>KamataEngine</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>KamataEngine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="C:\KamataEngine\DirectXGame\audio\Audio.h">
@@ -136,5 +142,7 @@
     <ClInclude Include="Grid.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="Line.h" />
+    <ClInclude Include="Collision.h" />
+    <ClInclude Include="Camera.h" />
   </ItemGroup>
 </Project>
